--- a/css/style.css
+++ b/css/style.css
@@ -335,131 +335,6 @@ header.sticky{
     background: #000;
 }
 
-/* Contact Section */
-.contact-section{
-    padding: 50px 0 80px;
-}
-.contact-section .contact-img{
-    flex: 0 0 100%;
-    max-width: 100%;
-    padding: 0 15px;
-}
-.contact-section .contact-img .img-box{
-    padding: 200px 0;
-    background-image: url('../images/Contactme.jpg');
-    background-size: cover;
-    background-position: center;
-}
-.contact-section .section-title{
-    text-align: center;  
-}
-.contact-section .section-title h1{
-    color: #f3f3f3;
-}
-.contact-section .section-title h1:before{
-    background-color: #f3f3f3;
-    left: 50%;
-    margin-left: -40px;
-}
-.contact-section .contact-form{
-    flex: 0 0 100%;
-    max-width: 100%;
-    padding: 0px 65px;
-}
-.contact-section .contact-form .form{
-    border: 1px solid white;
-    background-color: #000;
-    padding: 55px 40px;
-    margin-top: -150px;
-}
-.contact-section .contact-form .form label{
-    color: #fff;
-    font-weight: 400;
-    display: block;
-    margin: 0 0 5px;
-}
-
-.contact-section .contact-form .form .input-group{
-    flex: 0 0 100%;
-    max-width: 100%;
-    padding: 0 15px;
-}
-.contact-section .contact-form .form .input-group.left,
-.contact-section .contact-form .form .input-group.right{
-    flex: 0 0 50%;
-    max-width: 100%;
-}
-.contact-section .contact-form .form .input-control{
-    width: 100%;
-    height: 45px;
-    padding: 6px 0px;
-    color: #f3f3f3;
-    font-size: 16px;
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid #f3f3f3;
-}
-.contact-section .contact-form .form .input-control:focus{
-    outline: none;
-}
-.contact-section .contact-form .form textarea.input-control{
-    height: 140px;
-    resize: none;
-    padding-top: 12px
-}
-.contact-section .contact-form .form-btn{
-    text-align: center;
-}
-.form-btn button{
-    color: #fff;
-    background: transparent;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20x;
-    padding: 8px 28px;
-    border: 2px solid #f3f3f3;
-    cursor: pointer;
-}
-.form-btn button:hover{
-    background: #ffeba3;
-    border: 2px solid #ffeba3;
-    color: #353535;
-    transition: .4s;
-}
-.contact-section .contact-info{
-    flex: 0 0 100%;
-    max-width: 100%
-}
-.contact-section .contact-info .info-item{
-    flex: 0 0 33.33%;
-    display: inline-block;
-    max-width: 33.33%;
-    text-align: center;
-    padding: 0 15px;
-}
-.social-links a{
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    color: #f3f3f3;
-    cursor: pointer;
-    background-color: #000;
-    margin-right: 16px;
-    margin-bottom: 24px;
-}
-.social-links a:hover{
-    transform: scale(1.1);
-    background: #ffeba3;
-    transition: .4s;
-    color: #353535;   
-}
-.contact-section .social-links {
-    text-align: center; 
-}
 
 @media (max-width: 1270px){
     header{
@@ -540,4 +415,59 @@ header.sticky{
         width: 480px;
         height: auto;
     }
+}
+.contact{
+    background: #353535;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    align-items: center;
+    grid-gap: 3rem;
+}
+.contact-img{
+    height: 100vh;
+    width: 100%;
+    background-position-x: right;
+    position: relative;
+    background-size: contain;
+}
+.contact-form h2{
+    font-size: 30px;
+    margin-bottom: 15px;
+    margin-left: 24px;
+}
+.contact-form p{
+    color: #fff;
+    letter-spacing: 1px;
+    line-height: 24px;
+    font-size: 12px;
+    margin-bottom: 4.1rems;
+    margin-left: 24px;
+}
+.contact-form form input, form textarea{
+    width: 100%;
+    padding: 20px;
+    border: none;
+    outline: none;
+    background: #000;
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    margin-left: 24px;
+}
+.contact-form textarea{
+    resize: none;
+    height: 200px; 
+}
+.contact-form form .send{
+    display: inline-block;
+    background: #ffeba3;
+    color: #353535;
+    font-size: 16px;
+    font-weight: 600;
+    width: 120px;
+    transition: ease .35s;
+    text-transform: uppercase;
+}
+.contact-form form .send:hover{
+    transform: translateY(-8px);
+    cursor: pointer;
 }
